# junction2019-ml

./: .gitignore  README.md  app.py  pyproject.toml
model/: __init__.py  ml.py  nuuksio_paths.sav
notebooks/: nuuksio_paths.ipynb  predict.ipynb
