[tool.poetry]
name = "nuuksio"
version = "0.1.0"
description = ""
authors = ["xbexbex"]

[tool.poetry.dependencies]
python = "^3.7"
xlrd = "^1.2.0"
pandas = "^0.25.3"
numpy = "^1.17.4"
scikit-learn = "^0.21.3"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
